# information-theoretic-network-analysis

./: .gitignore  README.md  pyproject.toml
experiments/multivariate/: run_combine.py  run_sweep.py
experiments/multivariate/plots/: make_accuracy_plots.py  make_rank_plots.py
experiments/replication/: run_plots_replication.py  run_plots_theory.py
experiments/replication/data/: batra_results_replication.csv
experiments/replication/data/Results_OpenMx/: data_cond1.csv  data_cond10.csv  data_cond11.csv  data_cond12.csv  data_cond13.csv  (+43 more)
experiments/univariate/: run_sweep_bins.py  run_sweep_joint.py  run_sweep_n.py  run_sweep_parameter.py  run_sweep_stationarity.py
experiments/univariate/plots/: make_plots.py
results/univariate/bins_sweep/: combined.parquet
results/univariate/joint_sweep/: combined.parquet
results/univariate/parameter_sweep/: combined.parquet
results/univariate/samples_sweep/: combined.parquet
results/univariate/stationarity/: combined.parquet
src/infonet/: __init__.py
src/infonet/core/: __init__.py  base.py  pipeline.py  sensitivities.py
src/infonet/experiments/: __init__.py
src/infonet/jidt/: __init__.py  runtime.py
src/infonet/multivariate/: __init__.py  base.py  estimators.py  generators.py  pipeline.py  results.py
src/infonet/plotting/: __init__.py  labels.py  metrics.py  style.py
src/infonet/replication/: README.md  __init__.py  data.py  plots_empirical.py  plots_theory.py
src/infonet/univariate/: __init__.py  base.py  estimators.py  generators.py  ground_truth.py  pipeline.py  results.py  sensitivities.py
(+23 files in other folders)
